; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_soap.c_add_soap_fault_ex.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_soap.c_add_soap_fault_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"__soap_fault\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*, i8*, i8*, i32*)* @add_soap_fault_ex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_soap_fault_ex(i32* %0, i32* %1, i8* %2, i8* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @ZVAL_NULL(i32* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = call i32 @set_soap_fault(i32* %15, i32* null, i8* %16, i8* %17, i8* %18, i32* %19, i32* null)
  %21 = load i32*, i32** %8, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @add_property_zval(i32* %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32* %22)
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @Z_DELREF_P(i32* %24)
  ret void
}

declare dso_local i32 @ZVAL_NULL(i32*) #1

declare dso_local i32 @set_soap_fault(i32*, i32*, i8*, i8*, i8*, i32*, i32*) #1

declare dso_local i32 @add_property_zval(i32*, i8*, i32*) #1

declare dso_local i32 @Z_DELREF_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
